@@ -101,6 +101,8 @@ Version 1.6.7
        (Stefan Fuhrmann)
 - BUG: Errors returned in a post-commit hook script were ignored
        in a branch/tag/copy operation. (Stefan)
+- BUG: Text files dragged from the repository browser to the explorer
+       got truncated if they had the svn:eol-style property set. (Stefan)
 
 Version 1.6.6
 - CHG: Reduced disk access in the status cache. (Stefan)
